# dks-case

./: README.md  main.py  pyproject.toml
analysis/: analysis.py
data/: dummydata.json  location.csv
src/: data_processing.py  input.py  output.py
